--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.ifmo.se</groupId>
-    <artifactId>tpo-lab-1</artifactId>
+    <artifactId>tpo-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>tpo-lab-1</module>
+        <module>tpo-lab-2</module>
+    </modules>
+
+
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
