--- a/tpo-lab-2/pom.xml
+++ b/tpo-lab-2/pom.xml
@@ -14,5 +14,18 @@
     <artifactId>tpo-lab-2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.7.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
