--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>tpo-lab-1</module>
         <module>tpo-lab-2</module>
+        <module>tpo-lab-3</module>
     </modules>
 
 
